# Robotics

./: .clang-format  CMakeLists.txt
GUIControl/: CMakeLists.txt  main.cpp  movementwidget.cpp  movementwidget.h  movementwidget.ui
MovementControl/: CMakeLists.txt  main.cpp  roboclaw_msgs.proto  roboclawinterface.cpp  roboclawinterface.h
PS3ControllerControl/: CMakeLists.txt  joystick.cpp  joystick.h  main.cpp  ps3controller.cpp  ps3controller.h  robotics_msgs.proto  translator.cpp  translator.h
python/: config_loader.py  message_receiver.py  message_sender.py  receive_message.py  roboclaw_msgs_pb2.py  send_message.py
